@@ -1,0 +1,1 @@
+../inputs/cif_ddlm_dic_check/test_attr.cif
