@@ -1,0 +1,1 @@
+Tests the way dictionary files of the Template class are handled.
