@@ -1,0 +1,36 @@
+#\#CIF_2.0
+##############################################################################
+#                                                                            #
+#            TEST TEMPLATE DEFINITION ATTRIBUTES DICTIONARY                  #
+#                                                                            #
+##############################################################################
+data_TEST_TEMPL
+_dictionary.title            TEST_TEMPL
+_dictionary.class            Template
+_dictionary.version          1.0.0
+_dictionary.date             2020-10-01
+_dictionary.uri              www.example.org/test_templ.dic
+_dictionary.ddl_conformance  3.14.0
+_description.text
+;
+ This dictionary contains test definition attribute sets.
+;
+
+#---------------------------------------------------------------------------
+
+save_test
+_definition.update               2020-10-01
+_description.text
+;
+ Test data item.
+;
+save_
+
+loop_
+_dictionary_audit.version
+_dictionary_audit.date
+_dictionary_audit.revision
+1.0.0 2020-10-01
+;
+ Initial version of the test template dictionary.
+;
