@@ -1,0 +1,1 @@
+scripts/cif_ddlm_dic_check: tests/cases/cif_ddlm_dic_check_014.inp TEST_TEMPL: WARNING, dictionaries of the 'Template' dictionary class are currently not supported -- file will be skipped.
