@@ -21,6 +21,9 @@ cod-tools (unreleased)
     - cif_diff:
       - numerically compared values with standard uncertainties are
         unpacked before the comparison.
+    - cif_ddlm_dic_check:
+      - updated the script to recognise and skip dictionary files that
+        do not belong to the 'Reference' or 'Instance' dictionary class.
 
 cod-tools (3.1.0)
 
